@@ -37,7 +37,8 @@ public:
 
 	void setActions(
 		const widgets::TimelineWidget::Actions &actions,
-		QAction *layerViewNormal, QAction *layerViewCurrentFrame);
+		QAction *layerViewNormal, QAction *layerViewCurrentFrame,
+		QAction *showFlipbook);
 
 	int currentTrackId() const;
 	int currentFrame() const;
@@ -66,7 +67,8 @@ private:
 
 	void setUpTitleWidget(
 		const widgets::TimelineWidget::Actions &actions,
-		QAction *layerViewNormal, QAction *layerViewCurrentFrame);
+		QAction *layerViewNormal, QAction *layerViewCurrentFrame,
+		QAction *showFlipbook);
 
 	static void addTitleButton(
 		docks::TitleWidget *titlebar, QAction *action,
